<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/globe_icn"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news_icn"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/videos_icn"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_signal"
            android:icon="@drawable/signal_icn"
            android:title="@string/signal" />

        <item
            android:id="@+id/nav_my_health"
            android:icon="@drawable/health_icn"
            android:title="@string/myhealth" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/about_icn"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/settings_icn"
            android:title="@string/about" />
    </group>
</menu>
