<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maps">

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.cowa.covidwatch.ui.maps.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.cowa.covidwatch.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/nav_videos"
        android:name="com.cowa.covidwatch.ui.videos.VideosFragment"
        android:label="@string/videos"
        tools:layout="@layout/fragment_videos" />
    <fragment
        android:id="@+id/nav_signal"
        android:name="com.cowa.covidwatch.ui.signalcase.SignalCaseFragment"
        android:label="@string/signal"
        tools:layout="@layout/fragment_signal_case" />
    <fragment
        android:id="@+id/nav_my_health"
        android:name="com.cowa.covidwatch.ui.myhealth.MyHealthFragment"
        android:label="@string/myhealth"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.cowa.covidwatch.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.cowa.covidwatch.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>